--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-antlr4-python3-runtime==4.9.3
-graphviz==0.20.1
-pytest==7.4.0
-pytest-cov==4.1.0
-flake8==6.0.0
-black==23.7.0
-mypy==1.5.0
+antlr4-python3-runtime
+graphviz
